<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/new_entry_countries"
                android:textColor="@color/colorAccent"/>

            <CheckBox
                android:id="@+id/country_lithuania"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_country_lithuania" />

            <CheckBox
                android:id="@+id/country_latvia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_country_latvia" />

            <CheckBox
                android:id="@+id/country_estonia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_country_estonia" />

            <CheckBox
                android:id="@+id/country_poland"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_country_poland"
                android:checked="true"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_entry_population"
                android:textColor="@color/colorAccent"/>

            <RadioGroup
                android:id="@+id/population"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_entry_deaths_10000" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_entry_deaths_100000" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_entry_deaths_1000000" />

                <RadioButton
                    android:id="@+id/two_thousand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_entry_deaths_10000000"
                    android:checked="true"/>
            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/new_entry_capital"
                android:textColor="@color/colorAccent"/>

            <Spinner
                android:id="@+id/capital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/new_entry_region"
                android:textColor="@color/colorAccent"/>

            <EditText
                android:id="@+id/region"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/display_selected_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorRed"
                android:text="@string/new_entry_display_btn" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>